--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -3,24 +3,41 @@
     margin-bottom: 0.5rem;
     width: 100%;
     font-size: 1.8rem;
-    border: 0.1rem solid rgb(86, 165, 235, 0.25);
+    border: 0.1rem solid rgba(223, 219, 35, 0.25);
     background-color: white;
   }
   
   .choice-container:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(194, 206, 28, 0.5);
     transform: translateY(-0.1rem);
     transition: transform 150ms;
   }
   
   .choice-prefix {
     padding: 1.5rem 2.5rem;
-    background-color: #56a5eb;
+    background-color: #454608;
     color: white;
   }
   
   .choice-text {
     padding: 1.5rem;
   }
+  .correct {
+    background-color: #28a745;
+  }
   
+  .incorrect {
+    background-color: #dc3545;
+  }
+  #hud {
+      display:flex;
+      justify-content:space-between;
+  }
+  .hud-prefix {
+      text-align: center;
+      font-size:2-rem;
+  }
+  .hud-main-text {
+      text-align:center;
+  }
