--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -103,3 +103,21 @@
     box-shadow: none;
     transform: none;
   }
+  form {
+    width:100%;
+    display: flex;
+    flex-direction: colum;
+    align-items: center;
+  }
+  input {
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.8rem;
+    border: none;
+    box-shadow:0 0.1rem 1.4rem 0 rgb(95, 94, 21)
+
+  }
+  input::placeholder {
+    color:rgb(240, 231, 102)
+  }
